--- a/projects/postgresql/src/main/resources/templates/page/view.html
+++ b/projects/postgresql/src/main/resources/templates/page/view.html
@@ -9,7 +9,7 @@
 	<h3 th:text="'작성자 : ' + ${board.writer}"></h3>
 	<p th:text="${board.content}"></p>
 	<button onclick="location.href='/board'">뒤로가기</button>
-	<button onclick="location.href='/board'">수정하기</button>
-	<button onclick="location.href='/board'">삭제하기</button>
+	<button onclick="location.href=window.location.href+'/edit'">수정하기</button>
+	<button onclick="location.href=window.location.href+'/delete'">삭제하기</button>
 </body>
 </html>
