게시판 글 확인할떄 글 번호도 나오도록 수정

--- a/projects/postgresql/src/main/resources/templates/page/view.html
+++ b/projects/postgresql/src/main/resources/templates/page/view.html
@@ -5,7 +5,7 @@
 <title>Insert title here</title>
 </head>
 <body>
-	<h1 th:text="${board.title}"></h1>
+	<h1 th:text="${board.boardno}+'. '+${board.title}"></h1>
 	<h3 th:text="'작성자 : ' + ${board.writer}"></h3>
 	<p th:text="${board.content}"></p>
 	<button onclick="location.href='/board'">목록으로</button>
