--- a/blogskin/css.css
+++ b/blogskin/css.css
@@ -190,8 +190,6 @@ body {
 	}
 	.dark .util .search {
 		background-color: #111;
-    padding: 3px;
-    margin-top: 15px;
 	}
 	.dark .util .search input{
 		border-bottom : none;
@@ -4241,12 +4239,14 @@ html {
 	box-sizing: border-box;
 	transition: width 0.5s;
 	-webkit-transition: width 0.5s;
+	padding: 3px;
+  margin-top: 15px;
 }
 
 .util .search input {
     width: 100%;
     padding-bottom: 7px;
-    background: url(./images/icon-search.svg) no-repeat 98% 0;
+    background: url(./images/icon-search.svg) no-repeat 98% 3px;
     border: none;
     border-bottom: 2px solid #333;
     font-size: 14px;
