--- a/blogskin/css.css
+++ b/blogskin/css.css
@@ -1,32 +1,54 @@
 @charset "UTF-8";
 
-/* Buttons */
-#upBtn{
-	right: 20px;
+/* Dark Toggle Buttons */
+#upBtn {
+	display: none;
 }
-#darkBtn{
-	right: 80px;
-	filter: invert(100%);
+#dark-toggle-group{
+		bottom: 20px;
+		right: 20px;
+		position: fixed;
+		display: flex;
+		z-index: 9;
 }
-.btns{
+#dark-toggle-group div{
+	width: 60px;
+	height: 60px;
+}
+#dark-toggle-group button{
 	width:50px;
 	height:50px;
 	border-radius:50%;
 	font-size: 2em;
-	position: fixed;
-	opacity: 0.5;
+	opacity: 0.7;
 	text-align : center;
-	z-index: 1;
 	border: none;
-	bottom: 60px;
 	box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2), 0 6px 4px rgba(0, 0, 0, 0.2);
+	-webkit-transform:scale(1);
+	-moz-transform:scale(1);
+	-ms-transform:scale(1); 
+	-o-transform:scale(1);  
+	transform:scale(1);
+	-webkit-transition:.3s;
+	-moz-transition:.3s;
+	-ms-transition:.3s;
+	-o-transition:.3s;
+	transition:.3s;
+	background-color: #ddd;
 }
-.dark .btns{
-	opacity: 0.4;
+.dark #dark-toggle-group button {
+	background-color: #777;
+}
+#dark-toggle-group button:hover {
+    -webkit-transform:scale(1.1);
+    -moz-transform:scale(1.1);
+    -ms-transform:scale(1.1);   
+    -o-transform:scale(1.1);
+    transform:scale(1.1);
+		background-color: #999;
+}
+.dark #dark-toggle-group button{
 	box-shadow: 1px 1px 1px 1px rgba(255, 255, 255, 0.2)
-}
-.btns:hover{
-	background-color:#fff;
 }
 
 /* font */
@@ -78,9 +100,6 @@ body.dark{
 body {
 	transition: all 0.4s;
 }
-.dark #darkBtn {
-	filter : none;
-}
 .dark #footer{
 		border-top : none;
 }
@@ -89,6 +108,9 @@ body {
 }
 #tt-body-page,dark .main{
 	opacity : 0.9;
+}
+.dark b{
+	color: #999;
 }
 .dark #footer .box-site button{
 	display : none;
@@ -132,7 +154,7 @@ body {
 		border-bottom: 2px solid darkgrey;
 	}
 	.dark .link-icon{
-		color : unset;
+		color : #ccc;
 	}
 	.dark .link-icon :hover
 	, .dark .area-aside .box-category .tt_category .category_list .link_sub_item:hover
@@ -175,7 +197,11 @@ body {
 , .dark .menu_toolbar .list_toolbar .link_list
 , .dark .layer_post .btn_mark
 , .dark .area-aside .box-category .tt_category .link_tit
-, .dark .area-aside .box-category .tt_category .category_list .link_item{
+, .dark .area-aside .box-category .tt_category .category_list .link_item
+, .dark .article-tag .title-footer
+, .dark .article-page .title-footer
+, .dark .article-type-common .link-category
+	{
 		color : darkgray;
 	}
 	.dark .title-search.title-border
@@ -190,9 +216,6 @@ body {
 	}
 	.dark .util .search {
 		background-color: #111;
-	}
-	.dark .util .search input{
-		border-bottom : none;
 	}
 	.dark .layer_post .btn_mark:hover
 	, .dark .area-aside .box-profile .button-subscription:hover
@@ -258,6 +281,7 @@ body {
 	#tt-body-page.dark .article-view table tr:nth-child(2n) {
 		background-color: #222 !important;
 	}
+
 /******************** Dark Mode END ***************/
 	
 .link-icon{
@@ -4228,7 +4252,7 @@ html {
 .util{
 	position: absolute;
 	top: 0;
-	right: 0;
+	left: 200px;
 }
 
 .util .search {
@@ -4240,7 +4264,6 @@ html {
 	transition: width 0.5s;
 	-webkit-transition: width 0.5s;
 	padding: 3px;
-  margin-top: 15px;
 }
 
 .util .search input {
@@ -4290,11 +4313,12 @@ html {
 
 .util.use-top{
 	width:222px;
-	margin-top: -6px;
+	margin-top: 0px;
 }
 
 .util.use-top .search{
 	width:100%;
+	border-radius: 5px;
 }
 
 /* ----- media query - pc ----- */
@@ -4862,5 +4886,4 @@ html {
 .h_pointer:hover{
 	cursor: pointer;
 }
-
 
