--- a/blogskin/css.css
+++ b/blogskin/css.css
@@ -3,19 +3,13 @@
 /* Dark Toggle Buttons */
 #upBtn {
 	display: none;
-}
-#dark-toggle-group{
-		bottom: 20px;
-		right: 20px;
+		bottom: 25px;
+		right: 175px;
 		position: fixed;
 		display: flex;
 		z-index: 9;
 }
-#dark-toggle-group div{
-	width: 60px;
-	height: 60px;
-}
-#dark-toggle-group button{
+#upBtn button{
 	width:50px;
 	height:50px;
 	border-radius:50%;
@@ -36,10 +30,10 @@
 	transition:.3s;
 	background-color: #ddd;
 }
-.dark #dark-toggle-group button {
+.dark #upBtn button {
 	background-color: #777;
 }
-#dark-toggle-group button:hover {
+#upBtn button:hover {
     -webkit-transform:scale(1.1);
     -moz-transform:scale(1.1);
     -ms-transform:scale(1.1);   
@@ -47,7 +41,7 @@
     transform:scale(1.1);
 		background-color: #999;
 }
-.dark #dark-toggle-group button{
+.dark #upBtn button{
 	box-shadow: 1px 1px 1px 1px rgba(255, 255, 255, 0.2)
 }
 
@@ -60,7 +54,14 @@
 	src : url("images/SDSamliphopangcheTTFOutline.ttf");
 	font-family : "samlip-outline"
 }
-
+@font-face {
+	src : url("images/MaruBuri-Regular.ttf");
+	font-family : "MaruBuri-Regular"
+}
+@font-face {
+	src : url("images/NanumGothic-Regular");
+	font-family : "NanumGothic-Regular"
+}
 /* google translate */
 .goog-te-gadget-simple{
 	margin-left : 20px;
@@ -78,11 +79,14 @@
 	background-color: rgba(0, 0, 0, 0.8);
 }
 .modalBox {
-	position: relative;
-	text-align: center;
-	top : 50%;
-	left : 50%;
-	position : sticky;
+    position: relative;
+    text-align: center;
+    top: 2.5%;
+    left: 2.5%;
+    position: sticky;
+	  overflow: scroll;
+    max-height: 95%;
+    max-width: 95%;
 }
 p img:hover{
 	cursor: -webkit-zoom-in;
@@ -111,6 +115,12 @@ body {
 }
 .dark b{
 	color: #999;
+}
+.dark .wrapper{
+	opacity: 0.5;
+}
+.dark .og-title {
+	color: white !important;
 }
 .dark #footer .box-site button{
 	display : none;
@@ -3070,7 +3080,6 @@ html {
     margin: 0 0 33px 0;
     font-size: 48px;
     font-weight: 400;
-    line-height: 1.4;
     overflow: hidden;
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
@@ -3079,10 +3088,12 @@ html {
 }
 
 .article-header .box-info {
+	font-family: "samlip-basic";
 		display: flex;
-    font-size: 13px;
     line-height: 1.54;
     opacity: .7;
+    font-size: 20px;
+}
 }
 
 .article-header .box-info .writer {
@@ -3093,11 +3104,7 @@ html {
     position: relative;
 }
 
-.article-header .box-info .eta {
-	font-family: "samlip-basic";
-	  margin-left: 20px;
-    font-size: 1.5em;
-}
+.box
 
 .article-header .box-info .date:before {
     content: '';
@@ -4314,6 +4321,7 @@ html {
 .util.use-top{
 	width:222px;
 	margin-top: 0px;
+	margin-left: 20px;
 }
 
 .util.use-top .search{
@@ -4886,4 +4894,175 @@ html {
 .h_pointer:hover{
 	cursor: pointer;
 }
+
+/* new toggle */
+.wrapper{
+	display: flex;
+	bottom: 0px;
+	right: -30px;
+	position: fixed;
+	opacity: 0.7;
+	z-index: 11;
+	transform: translate(-50%, -50%);
+}
+
+.switch{
+position: relative;
+width: 130px;
+height: 50px;
+margin: 0px;
+appearance: none;
+-webkit-appearance: none;
+  
+background-image:url("./images/night.png");
+background-size: cover;
+background-repeat: no-repeat;
+border-radius: 25px;
+box-shadow: inset 0px 0px 2px rgba(255,255,255,.7);
+transition: background-image .7s ease-in-out;
+outline: none;
+cursor: pointer;
+overflow: hidden;
+}
+
+.switch:checked{
+	background-image: url("./images/day.png");
+background-size: cover;
+transition: background-image 1s ease-in-out;
+}
+
+
+.switch:after{
+content: '';
+width: 46px;
+height:46px;
+border-radius: 50%;
+background-color: #fff;
+position: absolute;
+left: 2px;
+top: 2px;
+transform: translateX(0px);
+animation: off .7s forwards cubic-bezier(.8, .5, .2, 1.4);
+box-shadow: inset 5px -5px 4px rgba(53, 53, 53, 0.3);
+}
+
+@keyframes off{
+0%{
+    transform: translateX(80px);
+    width: 46px;
+}
+50%{
+    width: 75px;  
+    border-radius: 25px;   
+}
+100%{
+    transform: translateX(0px); 
+    width: 46px;
+}
+}
+
+.switch:checked:after{
+animation: on .7s forwards cubic-bezier(.8, .5, .2, 1.4);
+box-shadow: inset -5px -5px 4px rgba(53, 53, 53, 0.3);
+}
+
+@keyframes on{
+0%{
+    transform: translateX(0px);
+    width: 46px;
+}
+50%{
+    width: 75px;  
+    border-radius: 25px;   
+}
+100%{
+    transform: translateX(80px); 
+    width: 46px;
+}
+}
+
+.switch:checked:before{
+content: '';
+width: 15px;
+height: 15px;
+border-radius: 50%;
+position: absolute;
+left: 15px;
+top: 5px;
+transform-origin: 53px 10px;
+background-color: transparent;
+box-shadow: 5px -1px 0px #fff;
+filter: blur(0px);
+animation: sun .7s forwards ease;
+}
+@keyframes sun{
+0%{
+    transform: rotate(170deg);
+    background-color: transparent;
+    box-shadow: 5px -1px 0px #fff;
+    filter: blur(0px);
+}
+50%{
+    background-color: transparent;
+    box-shadow: 5px -1px 0px #fff;
+    filter: blur(0px);
+}
+90%{
+    background-color: #f5daaa;
+    box-shadow: 0px 0px 10px #f5deb4,
+    0px 0px 20px #f5deb4,
+    0px 0px 30px #f5deb4,
+     inset 0px 0px 2px #efd3a3;
+     filter: blur(1px);
+}
+100%{
+    transform: rotate(0deg);
+    background-color: #f5daaa;
+    box-shadow: 0px 0px 10px #f5deb4,
+    0px 0px 20px #f5deb4,
+    0px 0px 30px #f5deb4,
+     inset 0px 0px 2px #efd3a3;
+     filter: blur(1px);
+}
+}
+
+.switch:before{
+content: '';
+width: 15px;
+height: 15px;
+border-radius: 50%;
+position: absolute;
+left: 15px;
+top: 5px;
+filter: blur(1px);
+background-color: #f5daaa;
+box-shadow: 0px 0px 10px #f5deb4,
+0px 0px 20px #f5deb4,
+0px 0px 30px #f5deb4,
+ inset 0px 0px 2px #efd3a3;
+ transform-origin: 53px 10px;
+ animation: moon .7s forwards ease;
+}
+@keyframes moon{
+0%{
+    transform: rotate(0deg);
+    filter: blur(1px);
+}
+50%{
+    filter: blur(1px);
+}
+90%{
+    background-color: transparent;
+    box-shadow: 5px -1px 0px #fff;
+    filter: blur(0px);
+
+}
+100%{
+    transform: rotate(170deg);
+    background-color: transparent;
+    box-shadow: 5px -1px 0px #fff;
+    filter: blur(0px);
+}
+}
+
 
