--- a/blogskin/css.css
+++ b/blogskin/css.css
@@ -118,6 +118,9 @@ body {
 .dark .wrapper{
 	opacity: 0.5;
 }
+.dark .wrapper:hover{
+	opacity: 0.8;
+}
 .dark .og-title {
 	color: white !important;
 }
@@ -291,7 +294,7 @@ body {
 		background-color : inherit !important;
 		color : inherit !important;
 	}
-	#tt-body-page.dark .article-view table tr:nth-child(2n) {
+	#tt-body-page.dark .article-view table:not(.hljs-ln) tr:nth-child(2n) {
 		background-color: #222 !important;
 	}
 /******************** Dark Mode END ***************/
@@ -4006,24 +4009,24 @@ html {
     margin: 0;
 }
 
-.article-view table {
+.article-view > table {
     border: 1px solid #dadce0;
     border-collapse: collapse;
 }
 
-.article-view table thead tr {
+.article-view > table thead tr {
     background: rgba(0, 0, 0, 0.05);
     font-size: 16px;
     color: #000;
 }
 
-.article-view table tr th,
-.article-view table tr td {
+.article-view > table tr th,
+.article-view > table tr td {
     padding: 7px;
     border-left: 1px solid #dadce0;
 }
 
-.article-view table tr {
+.article-view > table tr {
     border-bottom: 1px solid #dadce0;
 }
 
@@ -4907,7 +4910,9 @@ html {
 	z-index: 11;
 	transform: translate(-50%, -50%);
 }
-
+.wrapper:hover{
+	opacity: 0.8;
+}
 .switch{
 position: relative;
 width: 130px;
@@ -5067,3 +5072,19 @@ box-shadow: 0px 0px 10px #f5deb4,
 }
 }
 
+#tt-body-page .article-view table td.hljs-ln-line, #tt-body-page .article-view table th {
+    padding: 6px 13px;
+    border: none;
+}
+#tt-body-page .article-view table td.hljs-ln-line.hljs-ln-numbers {
+	border-right: 1px solid #dfe2e5;
+}
+#tt-body-page.dark .article-view table td.hljs-ln-line.hljs-ln-numbers {
+	border-right: 1px solid #999;
+}
+#tt-body-page .article-view table.hljs-ln tr {
+	background: none;
+}
+#tt-body-page .article-view table.hljs-ln tr {
+	border-top: none;
+}
