--- a/blogskin/css.css
+++ b/blogskin/css.css
@@ -6169,3 +6169,78 @@ Original One Dark Syntax theme from https://github.com/atom/one-dark-syntax
   text-decoration: underline;
 }
 
+/******************************
+*
+* tocbot.css
+*
+******************************/
+
+.toc {
+    overflow-y: auto
+}
+
+.toc>.toc-list {
+    overflow: hidden;
+    position: relative
+}
+
+.toc>.toc-list li {
+    list-style: none
+}
+
+.toc-list {
+    margin: 0;
+    padding-left: 10px
+}
+
+a.toc-link {
+    color: currentColor;
+	text-decoration: none;
+    height: 100%
+}
+a.toc-link:hover {
+	color: black;
+	font-weight: bold;
+}
+.dark a.toc-link:hover {
+	color: #ccc;
+	font-weight: bold;
+}
+.dark a.toc-link {
+	color: #999; 
+}
+
+.is-collapsible {
+    max-height: 1000px;
+    overflow: hidden;
+    transition: all 300ms ease-in-out
+}
+
+.is-collapsed {
+    max-height: 0
+}
+
+.is-position-fixed {
+    position: fixed !important;
+    top: 0
+}
+
+.is-active-link {
+    font-weight: 700
+}
+
+.toc-link::before {
+    background-color: #EEE;
+    content: ' ';
+    display: inline-block;
+    height: inherit;
+    left: 0;
+    margin-top: -1px;
+    position: absolute;
+    width: 2px
+}
+
+.is-active-link::before {
+    background-color: #54BC4B
+}
+
