--- a/blogskin/css.css
+++ b/blogskin/css.css
@@ -101,6 +101,10 @@
 }
 /* image modal end */
 
+#tt-body-page .article-view blockquote p{
+	font-size:0.9em;
+}
+/******************** Dark Mode***************/
 body.dark{
 		background-image: url("./images/darkmoon.jpg");
     background-size: cover;
@@ -108,7 +112,18 @@ body.dark{
 		background-color : black;
 }
 
-/******************** Dark Mode***************/
+.dark #chartdiv{
+	filter: invert(100%);
+}
+.dark ul.tt_category img {
+    filter: invert(100%);
+}
+#tt-body-page.dark .article-view p{
+	font-weight: 700;
+}
+#tt-body-page.dark .article-view blockquote p{
+	font-weight: 500;
+}
 body {
 	transition: all 0.4s;
 }
@@ -169,7 +184,6 @@ body {
 	#tt-body-page.dark .article-view h1
   , #tt-body-page.dark .article-view h2{
 		color: grey;
-		border-bottom: 2px solid #333;
 	}
 	.dark .link-icon{
 		color : #ccc;
@@ -231,9 +245,6 @@ body {
 	}
 	.dark .area-reply .list-reply-comment{
 		border-top : none;
-	}
-	.dark .util .search {
-		background-color: #111;
 	}
 	.dark .layer_post .btn_mark:hover
 	, .dark .area-aside .box-profile .button-subscription:hover
@@ -735,7 +746,7 @@ html {
 #tt-body-category:not(.wrap-drawer) .header,
 #tt-body-search:not(.wrap-drawer) .header,
 #tt-body-archive:not(.wrap-drawer) .header {
-    border-bottom: 1px solid #efefef;
+    border-bottom: none;
 }
 
 
@@ -776,6 +787,7 @@ html {
 	max-width: 100% !important;
 	margin: 0;
 	height: auto;
+	margin-top: 20px;
 }
 
 #tt-body-page .area-paging {
@@ -1796,6 +1808,7 @@ html {
 		padding-top : 40px;
 		padding-bottom: 40px;
 	  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2), 0 6px 4px rgba(0, 0, 0, 0.2);
+	width: 220px;
 }
 
 .area-aside .box-profile .img-profile {
@@ -2207,7 +2220,7 @@ html {
 .area-aside .box-visit .text-total {
     margin: -10px 0 3px 0;
     line-height: 1.64;
-    font-size: 24px;
+    font-size: 18px;
     font-weight: 600;
     color: #333;
 }
@@ -3080,7 +3093,6 @@ html {
 	font-family: "samlip-outline";
     display: block;
     width: 100%;
-    margin: 0 0 33px 0;
     font-size: 40px;
     font-weight: 400;
     overflow: hidden;
@@ -3088,7 +3100,7 @@ html {
     -webkit-box-orient: vertical;
     white-space: normal;
     word-break: keep-all;
-	margin-left: 10px
+		padding-left: 15px
 }
 
 .article-header .box-info {
@@ -4261,7 +4273,6 @@ html {
 	position: relative;
 	float: left;
 	overflow: hidden;
-	background-color: #fff;
 	box-sizing: border-box;
 	transition: width 0.5s;
 	-webkit-transition: width 0.5s;
@@ -4275,7 +4286,9 @@ html {
     border: none;
     border-bottom: 2px solid #333;
     font-size: 14px;
-    color: #999;
+}
+.dark .util .search input{
+	color: #ddd;
 }
 
 .util .search input::placeholder {
@@ -5753,7 +5766,6 @@ box-shadow: 0px 0px 10px #f5deb4,
 #tt-body-page .article-view h6 {
   margin-top: 24px;
   margin-bottom: 16px;
-  font-weight: 600;
   line-height: 1.25;
 }
 
@@ -5767,13 +5779,18 @@ box-shadow: 0px 0px 10px #f5deb4,
 }
 
 #tt-body-page .article-view h2 {
-  font-size: 1.8em;
-	margin-bottom: 50px;
+  font-size: 1.9em;
+	margin-bottom: 40px;
+	margin-top: 80px;
+	font-weight: normal;
 	font-family: 'samlip-outline';
 }
 
 #tt-body-page .article-view h3 {
-  font-size: 1.25em;
+  font-size: 1.5em;
+	margin-top: 50px;
+	font-family: 'samlip-basic';
+	font-weight: normal;
 }
 
 #tt-body-page .article-view h4 {
@@ -6256,7 +6273,13 @@ a.toc-link:hover {
 .toc-link.node-name--H1.is-active-link{
 	font-weight: normal;
 }
+.dark .toc-link.node-name--H1.is-active-link{
+	font-weight: bold;
+}
 .toc-link.node-name--H3 {
 	font-size: smaller;
 }
 
+div#chartdiv {
+    margin-left: 5px;
+}
